--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Vulnerability Reproduction DataSet
-description: This list is created and maintained by Penn State University
+description: This Vulnerability Reproduction DataSet is created and maintained by Penn State University
 show_downloads: false
 url: "https://vulnreproduction.github.io/" # the base hostname & protocol for your site
 
